# pachydurable

./: Cargo.toml  README.md
examples/: api.rs  schema.sql  spinup.sh
src/: autocomplete.rs  borg.rs  connect.rs  err.rs  fulltext.rs  http_server.rs  lib.rs  primary_key.rs  redis.rs  utils.rs
