[package]
name = "pachydurable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name = "api"
path = "examples/api.rs"


[dependencies]
async-trait = "0.1.66"
hyper = { version = "0.14.23", features = ["full"] }
hyperactive = { path = "../hyperactive" }
mobc = "0.8.1"
mobc-postgres = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio-postgres = "0.7.7"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
