[package]
name = "pachydurable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name = "api"
path = "examples/api.rs"


[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.66"
# The exact version of mobc and mobc-redis you select can lead to a situation where different machines
# Seem to recognize mobc_redis::error::RedisError as an alias for redis::RedisError, and others do not
mobc = "0.8.3"
mobc-postgres = "0.8.0"
mobc-redis = "0.8.2"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.94"
tokio-postgres = { version="0.7.7",  features = ["with-chrono-0_4"]}

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
rand = "0.8.5"
hyper = { version = "0.14.23", features = ["full"] }
hyperactive = { path = "../hyperactive" }

